new-database/.cicd/kubernetes/kustomize/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app3s-laravel
  name: app3s-laravel
spec:
  loadBalancerIP: 10.130.0.153
