new-database/.cicd/kubernetes/kustomize/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3s-laravel
spec:
  rules:
  - host: 3s.unilab.edu.br
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app3s-laravel
            port:
              number: 80
